--- a/src/main/java/app/netlify/spkisp_ramdani/assets/reports/LaporanNilai.jrxml
+++ b/src/main/java/app/netlify/spkisp_ramdani/assets/reports/LaporanNilai.jrxml
@@ -4,36 +4,66 @@
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="ispspk"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<queryString>
-		<![CDATA[SELECT nama_provider_alt, id_paket AS nama_paket, C1+C2+C3+C4+C5 AS skor_saw 
-FROM v_proses_terbobot ORDER BY skor_saw DESC]]>
+		<![CDATA[SELECT nama_provider, nama_paket, nama_kriteria, nilai, satuan_kriteria
+FROM nilai AS n
+INNER JOIN kriteria AS k ON n.id_kriteria = k.id_kriteria
+INNER JOIN paket AS p ON p.id_paket = n.id_paket
+INNER JOIN provider AS p2 ON p2.id_provider = p.id_provider 
+ORDER BY nama_provider ASC, nama_paket ASC;]]>
 	</queryString>
-	<field name="nama_provider_alt" class="java.lang.Object">
-		<property name="com.jaspersoft.studio.field.name" value="nama_provider_alt"/>
-		<property name="com.jaspersoft.studio.field.label" value="nama_provider_alt"/>
+	<field name="nama_provider" class="java.lang.Object">
+		<property name="com.jaspersoft.studio.field.name" value="nama_provider"/>
+		<property name="com.jaspersoft.studio.field.label" value="nama_provider"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="provider"/>
 	</field>
 	<field name="nama_paket" class="java.lang.Object">
-		<property name="com.jaspersoft.studio.field.name" value="nama"/>
-		<property name="com.jaspersoft.studio.field.label" value="nama"/>
+		<property name="com.jaspersoft.studio.field.name" value="nama_paket"/>
+		<property name="com.jaspersoft.studio.field.label" value="nama_paket"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="paket"/>
 	</field>
-	<field name="skor_saw" class="java.lang.Object">
-		<property name="com.jaspersoft.studio.field.name" value="skor_saw"/>
-		<property name="com.jaspersoft.studio.field.label" value="skor_saw"/>
+	<field name="nama_kriteria" class="java.lang.Object">
+		<property name="com.jaspersoft.studio.field.name" value="nama_kriteria"/>
+		<property name="com.jaspersoft.studio.field.label" value="nama_kriteria"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="kriteria"/>
+	</field>
+	<field name="nilai" class="java.lang.Object">
+		<property name="com.jaspersoft.studio.field.name" value="nilai"/>
+		<property name="com.jaspersoft.studio.field.label" value="nilai"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="nilai"/>
+	</field>
+	<field name="satuan_kriteria" class="java.lang.Object">
+		<property name="com.jaspersoft.studio.field.name" value="satuan_kriteria"/>
+		<property name="com.jaspersoft.studio.field.label" value="satuan_kriteria"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="kriteria"/>
 	</field>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
-	<title>
-		<band height="94" splitType="Stretch">
+	<pageHeader>
+		<band height="144" splitType="Stretch">
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
+			<line>
+				<reportElement x="-8" y="88" width="571" height="1" uuid="4a24d86f-339f-4b4b-8322-dbe5ff865b80"/>
+				<graphicElement>
+					<pen lineWidth="2.0"/>
+				</graphicElement>
+			</line>
 			<staticText>
-				<reportElement x="5" y="4" width="168" height="16" uuid="73b4ea20-7e72-4533-9f1e-37fd1c031c60"/>
+				<reportElement x="195" y="112" width="226" height="26" uuid="5622bb9a-c684-4652-b9f0-cebe2c19e41f"/>
+				<textElement>
+					<font size="14"/>
+				</textElement>
+				<text><![CDATA[LAPORAN NILAI KRITERIA]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="0" y="8" width="168" height="16" uuid="73b4ea20-7e72-4533-9f1e-37fd1c031c60"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[PT. BRAINCODE SOLUTION]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="5" y="16" width="408" height="58" uuid="0d203eae-8ab0-4dc9-85f4-9823abd17f21"/>
+				<reportElement x="0" y="20" width="408" height="58" uuid="0d203eae-8ab0-4dc9-85f4-9823abd17f21"/>
 				<textElement>
 					<paragraph lineSpacing="Single" lineSpacingSize="0.0"/>
 				</textElement>
@@ -42,27 +72,10 @@ Kavling 3-4, Karet, RT.10 /RW.1 Jakarta Barat
 Telp : (021) 5737326
 Website : www.braincodesolution.com]]></text>
 			</staticText>
-			<line>
-				<reportElement x="-8" y="78" width="571" height="1" uuid="4a24d86f-339f-4b4b-8322-dbe5ff865b80"/>
-				<graphicElement>
-					<pen lineWidth="2.0"/>
-				</graphicElement>
-			</line>
 			<image>
-				<reportElement x="426" y="0" width="130" height="75" uuid="8e6eeac9-c834-4e87-b0a3-70940a9931f7"/>
+				<reportElement x="421" y="4" width="130" height="75" uuid="8e6eeac9-c834-4e87-b0a3-70940a9931f7"/>
 				<imageExpression><![CDATA["logo_bc.png"]]></imageExpression>
 			</image>
-		</band>
-	</title>
-	<pageHeader>
-		<band height="44" splitType="Stretch">
-			<staticText>
-				<reportElement x="200" y="15" width="160" height="26" uuid="5622bb9a-c684-4652-b9f0-cebe2c19e41f"/>
-				<textElement>
-					<font size="14"/>
-				</textElement>
-				<text><![CDATA[HASIL PERANKINGAN]]></text>
-			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
@@ -77,7 +90,7 @@ Website : www.braincodesolution.com]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="250" y="18" width="100" height="20" uuid="c6fef6d4-ba3b-429b-8fe0-5fc2ced44f8d"/>
-				<text><![CDATA[Ranking]]></text>
+				<text><![CDATA[Kriteria]]></text>
 			</staticText>
 			<line>
 				<reportElement x="-8" y="40" width="571" height="1" uuid="14d1ebc9-3486-40e0-bcac-4fba522e3012"/>
@@ -88,6 +101,15 @@ Website : www.braincodesolution.com]]></text>
 					<pen lineWidth="1.0"/>
 				</graphicElement>
 			</line>
+			<staticText>
+				<reportElement x="360" y="18" width="80" height="20" uuid="dc58f067-bf39-4401-9c04-c163ac85840e"/>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[Nilai]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="445" y="18" width="100" height="20" uuid="8a437744-d2b9-4d3e-991f-d9bf9be82b70"/>
+				<text><![CDATA[Satuan]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
@@ -96,17 +118,26 @@ Website : www.braincodesolution.com]]></text>
 				<reportElement x="20" y="0" width="100" height="20" uuid="ed2c02c4-f3ed-496d-ac86-5a7ccb4dab42">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
-				<textFieldExpression><![CDATA[$F{nama_provider_alt}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{nama_provider}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="250" y="0" width="100" height="18" uuid="b18d8839-3f1f-48ff-88ab-5d0e94f2ef44"/>
-				<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{nama_kriteria}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="130" y="0" width="100" height="20" uuid="2a309201-c1d7-43db-859e-e1038d763dd5">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{nama_paket}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="350" y="0" width="80" height="18" uuid="c621ef45-20ba-4443-970b-d2c8b643be80"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA[$F{nilai}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="441" y="1" width="100" height="18" uuid="d384d5b7-e92d-4849-a426-cf3319d120e2"/>
+				<textFieldExpression><![CDATA[$F{satuan_kriteria}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -131,6 +162,18 @@ Website : www.braincodesolution.com]]></text>
 				<reportElement x="350" y="70" width="100" height="20" uuid="32a71c1c-5757-4da2-9124-957d45b40519"/>
 				<textElement textAlignment="Right"/>
 				<text><![CDATA[Dede Herman]]></text>
+			</staticText>
+			<textField evaluationTime="Report">
+				<reportElement x="58" y="67" width="26" height="21" uuid="bac00f79-4cc0-4bc2-9fa9-723c6113c5a0"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="10" y="66" width="18" height="22" uuid="7c4e7edd-4f99-40d1-9de4-d6ed4b393f49"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="30" y="66" width="21" height="22" uuid="e2a322fb-4bc6-4c7f-9b04-dadb836b7c1d"/>
+				<text><![CDATA[dari]]></text>
 			</staticText>
 		</band>
 	</columnFooter>
